--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
 
   defaultConfig {
     // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-    applicationId "com.wrteam.eshop"
+    applicationId "lhp.world"
     minSdkVersion 21
     targetSdkVersion 29
     versionCode flutterVersionCode.toInteger()
@@ -75,4 +75,5 @@ dependencies {
   // implementation platform('com.google.firebase:firebase-bom:26.7.0')
   implementation 'com.google.firebase:firebase-analytics'
   implementation platform('com.google.firebase:firebase-bom:28.2.1')
+  implementation("com.google.firebase:firebase-iid")
 }
